<resources>
    <string name="app_name">Remme</string>
    <string name="username">Username</string>
    <string name="Reg_name">Enter your full name</string>
    <string name="Reg_dob">Select DOB</string>
    <string name="Reg_email">Example@gmail.com</string>
    <string name="Reg_confirm">********</string>
    <string name="Reg_phone">Phone no.</string>
    <string name="password">Password</string>
    <string name="password1">********</string>
    <string name="fgpass">Forgot Password?</string>
    <string name="remme">Remember Me</string>
    <string name="head"> Remember Me</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="password2">Password:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="full_name">Full Name:</string>
    <string name="gender">GENDER:</string>
    <string name="e_mail_id">E-mail ID:</string>
    <string name="username3">Username:</string>
    <string name="confirm">Confirm:</string>
    <string name="register">REGISTER</string>
    <string name="Gender">Gender</string>
</resources>
