<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="214dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/head"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/et1"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="#ffffff"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:layout_below="@+id/et1"
        android:layout_alignStart="@+id/et1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ffffff"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignLeft="@+id/et1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="2dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:layout_below="@+id/editText2"
        android:focusable="true"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:checked="false"
        android:clickable="true"
        android:text="@string/remme"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#00306F"
        android:onClick="sendPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:onClick="openRegister"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="44dp" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="128dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginRight="128dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentRight="true" />
</androidx.constraintlayout.widget.ConstraintLayout>